--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "hamster-wars",
   "version": "1.0.0",
   "description": "Backend for firestore database to store hamster data",
-  "main": "index.js",
+  "main": "upload.js",
   "scripts": {
     "start": "nodemon dist/index.js",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "upload": "node upload.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,8 @@
     "@types/node": "^16.9.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "firebase-admin": "^9.11.1",
+    "firebase": "^9.0.2",
+    "firebase-admin": "^8.9.2",
     "lodash": "^4.17.21",
     "nodemon": "^2.0.12",
     "typescript": "^4.4.3"
