--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hamster-wars",
   "version": "1.0.0",
   "description": "Backend for firestore database to store hamster data",
-  "main": "upload.js",
+  "main": "index.js",
   "scripts": {
     "start": "nodemon dist/index.js",
     "tsc": "tsc",
@@ -25,7 +25,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase": "^9.0.2",
-    "firebase-admin": "^8.9.2",
+    "firebase-admin": "^9.11.1",
     "lodash": "^4.17.21",
     "nodemon": "^2.0.12",
     "typescript": "^4.4.3"
