--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for firestore database to store hamster data",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon dist/index.js",
+    "start": "node dist/index.js",
     "tsc": "tsc",
     "upload": "node upload.js"
   },
